Moved chords from backbone to parrot
